--- a/conda_envs/gatk_modified_environment.yaml
+++ b/conda_envs/gatk_modified_environment.yaml
@@ -1,8 +1,10 @@
 name: gatk_modified
 channels:
   - bioconda
-  - conda-forge
   - defaults
+  - conda-forge
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
@@ -10,6 +12,7 @@ dependencies:
   - _tflow_select=2.3.0=mkl
   - absl-py=0.15.0=pyhd8ed1ab_0
   - astor=0.8.1=pyh9f0ad1d_0
+  - bcftools=1.10.2=h4f4756c_3
   - binutils_impl_linux-64=2.36.1=h193b22a_2
   - binutils_linux-64=2.36=hf3e587d_33
   - biopython=1.76=py36h516909a_0
@@ -18,7 +21,7 @@ dependencies:
   - bwidget=1.9.14=ha770c72_1
   - bzip2=1.0.8=hd590300_5
   - c-ares=1.28.1=hd590300_0
-  - ca-certificates=2024.9.24=h06a4308_0
+  - ca-certificates=2024.12.31=h06a4308_0
   - cairo=1.16.0=hcf35c78_1003
   - colorama=0.4.5=pyhd8ed1ab_0
   - curl=7.68.0=hf8cf82a_0
@@ -52,6 +55,7 @@ dependencies:
   - h5py=2.10.0=nompi_py36h4510012_106
   - harfbuzz=2.4.0=h9f30f68_3
   - hdf5=1.10.6=nompi_h3c11f04_101
+  - htslib=1.10.2=h78d89cc_0
   - icu=64.2=he1b5a44_1
   - importlib-metadata=4.8.1=py36h5fab9bb_0
   - intel-openmp=2019.4=243
@@ -228,6 +232,7 @@ dependencies:
   - r-waldo=0.2.5=r36hc72bb7e_0
   - r-withr=2.4.2=r36hc72bb7e_0
   - readline=8.2=h8228510_1
+  - samtools=1.6=h244ad75_5
   - scikit-learn=0.23.1=py36h0e1014b_0
   - scipy=1.0.0=py36_blas_openblas_201
   - sed=4.8=he412f7d_0
@@ -273,3 +278,4 @@ dependencies:
       - pyqt5-sip==4.19.18
       - pyqtchart==5.12
       - pyqtwebengine==5.12.1
+
