--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ data/dest*
 data/diyabc_inputs*/POOL_*
 data/diyabc_inputs*/reftable*
 data/diyabc_inputs*/RNG*
+data/diyabc_noinv*/NoInv*
+data/diyabc_noinv*/POOL_*
+data/diyabc_noinv*/RNG*
+data/diyabc_noinv*/reftable*
 data/simulation*/
 data/dros_sim/
 data/wrong_sample_headers/
