--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,16 @@ data/reference
 data/mapping
 data/dest*
 data/diyabc_inputs*/
-data/diyabc_noinv*/NoInv*
-data/diyabc_noinv*/POOL_*
-data/diyabc_noinv*/RNG*
-data/diyabc_noinv*/reftable*
-data/diyabc_noinv*/.Rhistory
-data/diyabc_noinv*/Rplots.pdf
+data/diyabc_noinv_1/
+data/diyabc_noinv_2/
+data/diyabc_noinv_3/
+data/diyabc_noinv_4/
+data/diyabc_noinv_1a/
+data/diyabc_noinv_1b/
+data/diyabc_noinv_1c/
+data/diyabc_noinv_1d/POOL*
+data/diyabc_noinv_1d/.Rhistory
+data/diyabc_noinv_1d/Rplots.pdf
 data/simulation*/
 data/dros_sim/
 data/wrong_sample_headers/
