--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ data/diyabc_noinv_4/
 data/diyabc_noinv_1a/
 data/diyabc_noinv_1b/
 data/diyabc_noinv_1c/
+data/diyabc_noinv_1e*/
 data/diyabc_noinv_1d/POOL*
 data/diyabc_noinv_1d/.Rhistory
 data/diyabc_noinv_1d/Rplots.pdf
